- Rebuilding endpoints for downloading company offers and adding new offers
- Rebuilding endpoints for managing company photos (portfolio) - adding, deleting, downloading photos, and downloading a list of company photos to display on the website (portfolio)